# LoliLangCpp

./: .gitignore  ;  CMakeLists.txt  Makefile  README.md  daphnie.cpp  daphnie.h  expression.cpp  expression.h  lexer.cpp  lexer.h  lexy.cpp  lexy.h  main.cpp  test-results  token.cpp  token.h  utils.h
app/: CMakeLists.txt  app_main.cpp
examples/: example-one.loli  fib.loli
src/: CMakeLists.txt  ast.cpp  daphnie.cpp  daphnie.h  expression.cpp  utils.h
src/lib/loliLang/: ast.cpp  call.cpp  call.h  common.h  daphnie.cpp  daphnie.h  defCaller.cpp  defCaller.h  exceptions.cpp  exceptions.h  expression.cpp  expression.h  expressionConverter.cpp  expressionConverter.h  expressionFactory.hpp  gramm.cpp  gramm.h  lexer.cpp  lexer.h  lexy.cpp  lexy.h  loliInter.cpp  loliInter.h  memory.cpp  memory.h  token.h  types.cpp  types.h  utils.h
tests/: CMakeLists.txt  ast_tests.hpp  body_tests.hpp  call_tests.hpp  class_tests.hpp  daphnie_tests.hpp  exception_tests.hpp  for_tests.hpp  gtest_main.cpp  lexer_tests.hpp  lexy_tests.hpp  loli_tests.hpp  mockCommon.hpp  typechecking_tests.hpp  typemethods_tests.hpp
